--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <!--Toolbar-->
     <com.google.android.material.appbar.MaterialToolbar
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toBottomOf="@id/notesToolbar" />
     <!--Add note-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addNoteBtn"
+        android:id="@+id/btnAddNote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
