--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,7 +7,6 @@
     android:padding="16dp"
     tools:context=".ui.add.NoteFragment">
 
-    <!--Close-->
     <ImageView
         android:id="@+id/imgClose"
         android:layout_width="30dp"
@@ -17,7 +15,7 @@
         android:src="@drawable/ic_round_add_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <!--Title-->
+
     <EditText
         android:id="@+id/titleEdt"
         android:layout_width="0dp"
@@ -27,13 +25,13 @@
         android:hint="@string/title"
         android:maxLines="1"
         android:padding="10dp"
-        android:textColorHint="@color/yellowDark"
+        android:textColorHint="#009688"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgClose" />
-    <!--Description-->
+
     <EditText
         android:id="@+id/descEdt"
         android:layout_width="0dp"
@@ -43,13 +41,13 @@
         android:gravity="top"
         android:hint="@string/desc"
         android:padding="10dp"
-        android:textColorHint="@color/yellowDark"
+        android:textColorHint="#009688"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleEdt" />
-    <!--Content-->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/contentLay"
         android:layout_width="0dp"
@@ -66,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
-            <!--Title-->
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,7 +75,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-            <!--Spinner-->
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView2"
                 android:layout_width="150dp"
@@ -99,14 +97,14 @@
             </androidx.cardview.widget.CardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <!--Priority-->
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/priorityLay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/categoriesLay">
-            <!--Title-->
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -117,7 +115,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/cardView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-            <!--Spinner-->
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="150dp"
@@ -141,7 +139,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <!--Save-->
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/saveNote"
         android:layout_width="wrap_content"
@@ -151,8 +149,9 @@
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:backgroundTint="@color/green"
+        app:backgroundTint="@color/teal_700"
         app:cornerRadius="10dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
