--- a/app/src/main/res/layout/item_notes.xml
+++ b/app/src/main/res/layout/item_notes.xml
@@ -57,10 +57,11 @@
 
             <ImageView
                 android:id="@+id/categoryImg"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
+                android:src="@drawable/suitcase"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@id/titleTxt"
                 app:layout_constraintTop_toBottomOf="@id/descTxt" />
